# dumux-erosion

./: .gitignore  CMakeLists.txt  README.md  REUSE.toml  cmake.opts  config.h.cmake  dumux-erosion.pc.in  dumux-granular.pc.in  dune.module  reconfigure.sh  setup.sh
app/: CMakeLists.txt  hyperbolic.geo  main.cc  model.hh  obstacles_2d.json  obstacles_3d_ball.json  obstacles_3d_disk.json  obstacles_3d_flatbox.json  obstacles_retina.json  params.input  params_2d3d.input  params_3d.input  pressure.hh  problem.hh  run_erosion_2d.input  run_erosion_2d_in_3d.input  run_erosion_3d.input  run_scenario.py  torus.geo
cmake/modules/: CMakeLists.txt
data/: README.md  halfsphere.geo  heart.geo  requirements.txt  sphere.geo  surface.py
data/data/: EPI_ED.stl
doc/doxygen/: Doxylocal
